samples/_failures_safe/1761630766_a7a641_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_40cc9306.c: In function ‘main’:
./samples/SAFE/__tmp_40cc9306.c:155:21: error: expected declaration or statement at end of input
  155 |                     printf("Matrix A + B:\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_40cc9306.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_40cc9306.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_40cc9306.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_40cc9306.c:155:21: error: expected declaration or statement at end of input
